worker: give session control of the tty

The X server relies on the controlling tty to be set up
properly when getting run in a non-privileged mode.  This
commit makes sure that happens.

https://bugzilla.gnome.org/show_bug.cgi?id=745031